// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateLabel renders children 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueOpened"
  data-variant="normal"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
    />
    <path
      d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
    />
  </svg>
  hi
</span>
`;

exports[`StateLabel respects the status prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueOpened"
  data-variant="normal"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
    />
    <path
      d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the status prop 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueClosed"
  data-variant="normal"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M11.28 6.78a.75.75 0 0 0-1.06-1.06L7.25 8.69 5.78 7.22a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l3.5-3.5Z"
    />
    <path
      d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-1.5 0a6.5 6.5 0 1 0-13 0 6.5 6.5 0 0 0 13 0Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the status prop 3`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueClosedNotPlanned"
  data-variant="normal"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm9.78-2.22-5.5 5.5a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l5.5-5.5a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the status prop 4`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="pullMerged"
  data-variant="normal"
>
  <svg
    aria-label="Pull request"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M5.45 5.154A4.25 4.25 0 0 0 9.25 7.5h1.378a2.251 2.251 0 1 1 0 1.5H9.25A5.734 5.734 0 0 1 5 7.123v3.505a2.25 2.25 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.95-.218ZM4.25 13.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm8.5-4.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5ZM5 3.25a.75.75 0 1 0 0 .005V3.25Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the status prop 5`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="pullQueued"
  data-variant="normal"
>
  <svg
    aria-label="Pull request"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm5-7.75a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0Zm5.75 2.5a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-1.5 0a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the variant prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueOpened"
  data-variant="small"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
    />
    <path
      d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the variant prop 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  text-align: center;
  border-radius: 100px;
}

.c0[data-variant='small'] {
  padding-inline: var(--base-size-8,8px);
  padding-block: var(--base-size-4,4px);
  font-size: var(--text-body-size-small,12px);
}

.c0[data-variant='normal'] {
  padding-inline: 12px;
  padding-block: var(--base-size-8,8px);
  font-size: var(--text-body-size-medium,14px);
}

.c0[data-status='issueClosed'] {
  background-color: var(--bgColor-done-emphasis,);
}

.c0[data-status='issueClosedNotPlanned'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='pullClosed'] {
  background-color: var(--bgColor-closed-emphasis,var(--color-closed-emphasis,#cf222e));
}

.c0[data-status='pullMerged'] {
  background-color: var(--bgColor-done-emphasis,var(--color-done-emphasis,#8250df));
}

.c0[data-status='pullQueued'] {
  background-color: var(--bgColor-attention-emphasis,var(--color-attention-emphasis,#9a6700));
}

.c0[data-status='issueOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='pullOpened'] {
  background-color: var(--bgColor-open-emphasis,var(--color-open-emphasis,#1f883d));
}

.c0[data-status='draft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='issueDraft'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0[data-status='unavailable'] {
  background-color: var(--bgColor-neutral-emphasis,var(--color-neutral-emphasis,#6e7781));
}

.c0 .StateLabelIcon {
  margin-inline-end: var(--base-size-4,4px);
}

.c0[data-variant='small'] .StateLabelIcon {
  width: 1em;
}

<span
  className="c0"
  data-status="issueOpened"
  data-variant="normal"
>
  <svg
    aria-label="Issue"
    className="StateLabelIcon"
    fill="currentColor"
    focusable="false"
    height={16}
    role="img"
    style={
      {
        "display": "inline-block",
        "overflow": "visible",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
    />
    <path
      d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
    />
  </svg>
</span>
`;
